tests/compile_failures/bad_setting_value_splitbits.rs
use splitbits::*;

fn main() {
    splitbits!(min=pokemon, 0b11011101, "aaabbccc");
}
